# leyline-poc0-determinism-gate

./: .gitignore  Cargo.toml  Makefile  README.md  SETUP.md  clippy.toml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: gate.yml  mint-goldens.yml
crates/gate-cli/: Cargo.toml  build.rs
crates/gate-cli/src/: main.rs
crates/gate-runner/: Cargo.toml
crates/gate-runner/src/: lib.rs
crates/gate-wasm/: Cargo.toml
crates/gate-wasm/src/: lib.rs
crates/world-kernel/: Cargo.toml
crates/world-kernel/src/: lib.rs  prng.rs  transcript.rs  workload.rs
docs/: ACCEPTANCE.md  DETERMINISM.md  POC0-SPEC.md
fixtures/: .gitkeep
fixtures/f5-lint/: Cargo.toml  expect-red.sh
fixtures/f5-lint/src/: lib.rs
fixtures/red-paths/: Cargo.toml  expect-red.sh
goldens/: .gitkeep  v0.json
harness/: local-gate.sh
harness/ci/: annotate.py  golden-guard.sh  mint-check.sh  mint.py
harness/compare/: compare.py
harness/node/: run.mjs
