# POC 0 — Determinism Gate. Standalone public repo (extracted from the private
# leyline monorepo so it gets free ARM Linux runners + branch protection). Its
# own Cargo.lock and pinned toolchain. See docs/POC0-SPEC.md for the full build
# spec, docs/DETERMINISM.md for the covenant these crates are bound by.
[workspace]
resolver = "3"
members = ["crates/*"]
# Red-path fixtures (§8) deliberately violate the covenant, so they must stay out
# of the real workspace/lint job. They still sit under the repo root, so they
# inherit this repo's clippy.toml and toolchain pin — which is the point.
exclude = ["fixtures"]

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "LicenseRef-Proprietary"
publish = false

[workspace.dependencies]
world-kernel = { path = "crates/world-kernel" }
gate-runner = { path = "crates/gate-runner" }
# Covenant-bound dependency universe (§4.4): libm for world-kernel, sha2 for
# gate-runner. Everything else lives in gate-cli / harness only.
libm = "0.2"
sha2 = "0.10"

[profile.release]
# R5: unintended integer overflow must turn the gate RED, not silently wrap.
# Performance is explicitly irrelevant at POC 0, so we pay for the check.
overflow-checks = true
# Reproducible codegen.
codegen-units = 1
